--- a/my-react/src/components/Sidebar/Sidebar.module.css
+++ b/my-react/src/components/Sidebar/Sidebar.module.css
@@ -15,6 +15,10 @@
 	margin-bottom: 10px;
 }
 
+a {
+	text-decoration: none;
+}
+
 .sidebar__item a {
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	color: #fff;
