--- a/my-react/src/components/Content/Login/LoginForm.module.css
+++ b/my-react/src/components/Content/Login/LoginForm.module.css
@@ -6,7 +6,7 @@
 	margin-bottom: 10px;
 }
 
-.formInput input {
+/* .formInput input {
 	height: 20px;
 	border: none;
 	border-radius: 20px;
@@ -16,7 +16,7 @@
 .formInput input:focus {
 	outline: none;
 	box-shadow: 0 0 3px #333;
-}
+} */
 
 .formCheckbox {
 	margin-bottom: 40px;
@@ -26,7 +26,7 @@
 	cursor: pointer;
 }
 
-button {
+.formButton button {
 	padding: 10px 30px;
 	border: none;
 	border-radius: 20px;
@@ -37,6 +37,6 @@ button {
 	box-shadow: 0 0 3px #333;
 }
 
-button:active {
+.formButton button:active {
 	box-shadow: inset 0 0 3px #333;
 }
